Prepped all the code for hosting

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 </head>
 
 <body class="bodyclass">
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project/contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
     <p id="fall">It's autumn</p>
     <p class="winter">It's winter</p>
