--- a/project/contact.html
+++ b/project/contact.html
@@ -6,6 +6,13 @@
     </head>
 
     <body onload="darkLight()">
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="project/contact.html">Contact</a></li>
+            </ul>
+        </nav>
         <p id="hello">This is a test!</p>
         <p>Some text to see what happens</p>
         <button type="button" onclick="helloWorld()">Click me!</button>
